[package]
name = "lyne"
version = "0.0.1-alpha.3"
edition = "2021"
authors = ["SymphonySimper"]
description = "A tool to improve local dx"
repository = "https://github.com/Clayien/lyne"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.1"
